--- a/resource/css/style.css
+++ b/resource/css/style.css
@@ -18,6 +18,8 @@ small { font-size:11px; font-weight:normal; }
 
 li.third_party { list-style:none; padding:0; margin:0; width:64px; height:64px; float:left; padding:0 10px 10px 0; }
 li.third_party a { display:block; width:64px; height:64px; font-size:10px; text-align:center; text-decoration:none; color:#333; text-shadow:0px 0px 3px #fff; }
+li.third_party a:hover { border-radius:10px; box-shadow:0 1px 5px black inset; }
+li.third_party a:active { border-radius:10px; box-shadow:0 1px 15px black inset; }
 li.google { background:url(../img/auth_icons/google.png) no-repeat; }
 li.microsoft { background:url(../img/auth_icons/microsoft.png) no-repeat; }
 li.aol { background:url(../img/auth_icons/aol.png) no-repeat; }
