--- a/resource/css/style.css
+++ b/resource/css/style.css
@@ -1,8 +1,8 @@
 body { background:#477fae; color:#000; font-family:Arial, Helvetica, sans-serif; font-size:12px; }
 
-.container_12 { -moz-border-radius:5px; -webkit-border-radius:5px; padding:10px 0; }
-.field_error, .form_error { color:#96000b; display:block; margin-bottom:10px; font-weight:bold; background:#fafaba; padding:3px 10px; -moz-border-radius:5px; -webkit-border-radius:5px; }
-.form_info { color:#3683bb; display:block; margin-bottom:10px; font-weight:bold; background:#fafaba; padding:3px 10px; -moz-border-radius:5px; -webkit-border-radius:5px; }
+.container_12 { border-radius:5px; padding:10px 0; }
+.field_error, .form_error { color:#96000b; display:block; margin-bottom:10px; font-weight:bold; background:#fafaba; padding:3px 10px; border-radius:5px; }
+.form_info { color:#3683bb; display:block; margin-bottom:10px; font-weight:bold; background:#fafaba; padding:3px 10px; border-radius:5px; }
 
 a { color:#55a6d5; }
 a:hover { color:#1d72a3; }
@@ -17,7 +17,7 @@ h3 a { text-decoration:none; }
 small { font-size:11px; font-weight:normal; }
 
 li.third_party { list-style:none; padding:0; margin:0; width:64px; height:64px; float:left; padding:0 10px 10px 0; }
-li.third_party a { display:block; width:64px; height:64px; font-size:10px; text-align:center; text-decoration:none; color:#333; text-shadow:0px 0px 3px #fff; }
+li.third_party a { display:block; width:64px; height:64px; font-size:10px; text-align:center; text-decoration:none; color:#333; text-shadow:0 0 3px #fff; }
 li.third_party a:hover { border-radius:10px; box-shadow:0 1px 5px black inset; }
 li.third_party a:active { border-radius:10px; box-shadow:0 1px 15px black inset; }
 li.google { background:url(../img/auth_icons/google.png) no-repeat; }
@@ -40,7 +40,7 @@ select.select { width:254px; height:26px; }
 input.checkbox { width:auto; }
 
 .button { font-family:Arial, Helvetica, sans-serif; font-size:12px; background:#f08300; color:#fff; 
-padding:4px 16px; border:none; text-decoration:none; cursor:pointer; cursor:hand; -moz-border-radius:5px; -webkit-border-radius:5px; }
+padding:4px 16px; border:none; text-decoration:none; cursor:pointer; cursor:hand; border-radius:5px; }
 .button:hover { background:#fca500; color:#fff; } 
 button.button { padding:3px 13px; }
 .textright { text-align:right; }
@@ -52,8 +52,7 @@ button.button { padding:3px 13px; }
 	#main_menu .container_12 { padding:0; margin-bottom:5px; }
 	#main_menu ul { float:left; margin:0; }
 	#main_menu ul li { float:left; list-style:none; margin:0; }
-	#main_menu ul li a { float:left; padding:3px 10px; margin:5px 5px 0 0; background:#27445f; text-decoration:none; 
-		-moz-border-radius-topright:5px; -moz-border-radius-topleft:5px; -webkit-border-top-right-radius:5px; -webkit-border-top-left-radius:5px; }
+	#main_menu ul li a { float:left; padding:3px 10px; margin:5px 5px 0 0; background:#27445f; text-decoration:none; border-radius:5px 5px 0 0; }
 	#main_menu ul li a:hover { color:#fff; }
 	#main_menu ul li.active a { background:#3a638a; color:#fff; }
 #content { margin:5px 0; }
